added gmail configation

--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
 </head>
 
 <body>
-    <header id="header" class="fixed-top" style="background:#3D4D6A">
+    <header id="header" class="fixed-top        " style="background:#3D4D6A">
         <div class="container d-flex align-items-center">
 
             <h1 class="logo me-auto"><a href="index.html">Sai Waterproofing</a></h1>
@@ -42,11 +42,11 @@
                 <ul>
                     <li><a class="nav-link scrollto active" href="index.html">Home</a></li>
                     <li><a class="nav-link scrollto" href="#about">About</a></li>
-                    <li><a class="nav-link scrollto" href="#services">Services</a></li> 
+                    <li><a class="nav-link scrollto" href="Service.html">Services</a></li> 
                     <li><a class="nav-link   scrollto" href="#portfolio">Portfolio</a></li>
-                    <li><a class="nav-link scrollto" href="teams.html">Team</a></li>
+                    <li><a class="nav-link scrollto" href="#team">Team</a></li>
 
-                    <li><a class="nav-link scrollto" href="contact.html">Contact</a></li>
+                    <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
                     <li><a class="getstarted scrollto" href="#about">Get Started</a></li>
                 </ul>
                 <i class="bi bi-list mobile-nav-toggle"></i>
@@ -57,108 +57,12 @@
 
 
 
-    <!-- ======= Services Section ======= -->
-    <section id="services" class="services section-bg mt-5">
-        <div class="container" data-aos="fade-up">
-            <div class="section-title pt-5">
-                <h2>Services</h2>
-                <p>We are providing best services in Dehradun and work in the following categories:</p>
-            </div>
-
-            <div class="row">
-                <div class="col-xl-3 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
-                    <div class="icon-box">
-                        <div class="icon"><img src="assets/img/Service/wall.webp" alt="" class="img-fluid"></div>
-                        <h4><a href="">External wall waterproofing  </a></h4>
-                        <p>We provide water proofing for external wall which faces the direct brunt of rains and weather
-                            changes.
-                        </p>
-                    </div>
-                </div>
-
-                <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in"
-                    data-aos-delay="200">
-                    <div class="icon-box">
-                        <div class="icon"><img src="assets/img/Service/water-tank.webp" alt="" class="img-fluid"></div>
-                        <h4><a href="">Water tank water proofing</a></h4>
-                        <p>We provice water proofing services for your storage water tank to prevent leakage and waste
-                            of water.
-                        </p>
-                    </div>
-                </div>
-
-                <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-xl-0" data-aos="zoom-in"
-                    data-aos-delay="300">
-                    <div class="icon-box">
-                        <div class="icon"><img src="assets/img/Service/structual.jpeg" alt="" class="img-fluid"></div>
-                        <h4><a href="">Structural Waterproofing Contractors</a></h4>
-                        <p>We are one of the renowned structural waterproofing contractors with enormous knowledge in
-                            this field.
-                        </p>
-                    </div>
-                </div>
-
-                <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-xl-0" data-aos="zoom-in"
-                    data-aos-delay="400">
-                    <div class="icon-box">
-                        <div class="icon"><img src="assets/img/Service/bathroom.webp" alt="" class="img-fluid"></div>
-                        <h4><a href="">Bathroom water proofing</a></h4>
-                        <p>We provide water proofing for bathroom which is always exposed to severe moisture and extreme
-                            conditions.</p>
-                    </div>
-                </div>
-            </div>
-            <br>
-            <div class="row">
-                <div class="col-xl-3 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
-                    <div class="icon-box">
-                        <div class="icon"><img src="assets/img/Service/chem.jpeg" alt="" class="img-fluid"></div>
-                        <h4><a href="">Chem-Cem Injection Grouting</a></h4>
-                        <p>Structural cracks and gaps are to be filled with low pressure injection grouting of slurry of Elastomaric chemical and cement.
-                        </p>
-                    </div>
-                </div>
-
-                <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in"
-                    data-aos-delay="200">
-                    <div class="icon-box">
-                        <div class="icon"><img src="assets/img/Service/pu.webp" alt="" class="img-fluid"></div>
-                        <h4><a href="">PU Injection Grouting</a></h4>
-                        <p>Polyurethane is the only chemical which reacts with water and get converted in gel followed by foam to instantly stop running water from basement, dam, bridges and tunnel like structures.
-                        </p>
-                    </div>
-                </div>
-
-                <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-xl-0" data-aos="zoom-in"
-                    data-aos-delay="300">
-                    <div class="icon-box">
-                        <div class="icon">
-                            <img src="assets/img/Service/industrial.webp" alt="" class="img-fluid">
-                        </div>
-                        <h4><a href=""> Industrial Waterproofing Contractors</a></h4>
-                        <p>We have a team of expert contractors who are specialised in Industrial Waterproofing at a reasonable rate.
-                        </p>
-                    </div>
-                </div>
-
-                <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-xl-0" data-aos="zoom-in"
-                    data-aos-delay="400">
-                    <div class="icon-box">
-                        <div class="icon"><img src="assets/img/Service/internal.webp" alt="" class="img-fluid"></div>
-                        <h4><a href="">Internal wall waterproofing</a></h4>
-                        <p>We have services for water proofing for internal wall to prevent long term effects of water penetration.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section><!-- End Services Section -->
-
 
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
         <div class="container" data-aos="fade-up">
   
-          <div class="section-title">
+          <div class="section-title mt-5">
             <h2>Contact</h2>
             <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
               consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit
@@ -196,7 +100,7 @@
             </div>
   
             <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
-              <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+              <form action="https://formspree.io/f/xpzewlvk" method="post" role="form" class="php-email-form">
                 <div class="row">
                   <div class="form-group col-md-6">
                     <label for="name">Your Name</label>
@@ -217,7 +121,7 @@
                 </div>
                 <div class="my-3">
                   <div class="loading">Loading</div>
-                  <div class="error-message"></div>
+                  <div class="error-message">We are working on it</div>
                   <div class="sent-message">Your message has been sent. Thank you!</div>
                 </div>
                 <div class="text-center"><button type="submit">Send Message</button></div>
