--- a/Service.html
+++ b/Service.html
@@ -41,13 +41,11 @@
             <nav id="navbar" class="navbar">
                 <ul>
                     <li><a class="nav-link scrollto active" href="index.html">Home</a></li>
-                    <li><a class="nav-link scrollto" href="#about">About</a></li>
-                    <li><a class="nav-link scrollto" href="#services">Services</a></li> 
-                    <li><a class="nav-link   scrollto" href="#portfolio">Portfolio</a></li>
-                    <li><a class="nav-link scrollto" href="teams.html">Team</a></li>
-
-                    <li><a class="nav-link scrollto" href="contact.html">Contact</a></li>
-                    <li><a class="getstarted scrollto" href="#about">Get Started</a></li>
+          <li><a class="nav-link scrollto" href="About.html">About</a></li>
+          <li><a class="nav-link scrollto" href="Service.html">Services</a></li>
+          <li><a class="nav-link scrollto" href="contact.html">Contact</a></li>
+          <li><a class="nav-link scrollto" href="teams.html">Teams</a></li> 
+          <li><a class="getstarted scrollto" href="contact.html">Get Started</a></li>
                 </ul>
                 <i class="bi bi-list mobile-nav-toggle"></i>
             </nav><!-- .navbar -->
