--- a/teams.html
+++ b/teams.html
@@ -40,14 +40,12 @@
 
             <nav id="navbar" class="navbar">
                 <ul>
-                    <li><a class="nav-link scrollto active" href="index.html">Home</a></li>
-                    <li><a class="nav-link scrollto" href="#about">About</a></li>
-                    <li><a class="nav-link scrollto" href="Service.html">Services</a></li> 
-                    <li><a class="nav-link   scrollto" href="#portfolio">Portfolio</a></li>
-                    <li><a class="nav-link scrollto" href="#team">Team</a></li>
-
-                    <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
-                    <li><a class="getstarted scrollto" href="#about">Get Started</a></li>
+                  <li><a class="nav-link scrollto active" href="index.html">Home</a></li>
+                  <li><a class="nav-link scrollto" href="About.html">About</a></li>
+                  <li><a class="nav-link scrollto" href="Service.html">Services</a></li>
+                  <li><a class="nav-link scrollto" href="contact.html">Contact</a></li>
+                  <li><a class="nav-link scrollto" href="teams.html">Teams</a></li> 
+                  <li><a class="getstarted scrollto" href="contact.html">Get Started</a></li>
                 </ul>
                 <i class="bi bi-list mobile-nav-toggle"></i>
             </nav><!-- .navbar -->
@@ -147,7 +145,6 @@
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
         <div class="container" data-aos="fade-up">
-  
           <div class="section-title">
             <h2>Contact</h2>
             <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
@@ -156,7 +153,6 @@
           </div>
   
           <div class="row">
-  
             <div class="col-lg-5 d-flex align-items-stretch">
               <div class="info">
                 <div class="address">
