modified the service page

--- a/About.html
+++ b/About.html
@@ -155,6 +155,22 @@
             </div>
         </div>
     </div>
+    
+
+    <div class="next-step">
+        <div class="container p-5">
+            <div class="row">
+                <div class="col m-auto">
+                    <h1>Ready to take the Next Step?</h1>
+                    <p>If you are looking to reimagine your waterproofing projects with Sai Waterproofing, we have an extensive network of licensed applicators who would be thrilled to work with you! Send us an enquiry below or directly find applicators near you!</p>
+                    <div class="btn btn-success">Send a Enquiry</div>
+                </div>
+                <div class="col">
+                    <img src="assets/img/hero-img.png" class="img-fluid animated" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- ======= Footer ======= -->
     <footer id="footer">
