--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
               contractors and waterproofing service provider. We deal with different types of waterproofing material and
               provide all kinds of waterproofing work.
             </p>
-            <a href="#" class="btn-learn-more">Learn More</a>
+            <a href="About.html" class="btn-learn-more">Learn More</a>
           </div>
         </div>
 
@@ -221,9 +221,9 @@
 
         <ul id="portfolio-flters" class="d-flex justify-content-center" data-aos="fade-up" data-aos-delay="100">
           <li data-filter="*" class="filter-active">All</li>
-          <li data-filter=".filter-app">App</li>
-          <li data-filter=".filter-card">Card</li>
-          <li data-filter=".filter-web">Web</li>
+          <li data-filter=".filter-app">One</li>
+          <li data-filter=".filter-card">Two</li>
+          <li data-filter=".filter-web">Three</li>
         </ul>
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
