--- a/teams.html
+++ b/teams.html
@@ -44,7 +44,7 @@
                   <li><a class="nav-link scrollto" href="About.html">About</a></li>
                   <li><a class="nav-link scrollto" href="Service.html">Services</a></li>
                   <li><a class="nav-link scrollto" href="contact.html">Contact</a></li>
-                  <li><a class="nav-link scrollto" href="teams.html">Teams</a></li> 
+                  <li><a class="nav-link scrollto" href="teams.html">Testimonials</a></li> 
                   <li><a class="getstarted scrollto" href="contact.html">Get Started</a></li>
                 </ul>
                 <i class="bi bi-list mobile-nav-toggle"></i>
@@ -59,7 +59,7 @@
         <div class="container" data-aos="fade-up">
   
           <div class="section-title mt-5">
-            <h2>Team</h2>
+            <h2>Testimonials</h2>
             <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
               consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit
               in iste officiis commodi quidem hic quas.</p>
@@ -74,12 +74,6 @@
                   <h4>Walter White</h4>
                   <span>Chief Executive Officer</span>
                   <p>Explicabo voluptatem mollitia et repellat qui dolorum quasi</p>
-                  <div class="social">
-                    <a href=""><i class="ri-twitter-fill"></i></a>
-                    <a href=""><i class="ri-facebook-fill"></i></a>
-                    <a href=""><i class="ri-instagram-fill"></i></a>
-                    <a href=""> <i class="ri-linkedin-box-fill"></i> </a>
-                  </div>
                 </div>
               </div>
             </div>
@@ -91,12 +85,6 @@
                   <h4>Sarah Jhonson</h4>
                   <span>Product Manager</span>
                   <p>Aut maiores voluptates amet et quis praesentium qui senda para</p>
-                  <div class="social">
-                    <a href=""><i class="ri-twitter-fill"></i></a>
-                    <a href=""><i class="ri-facebook-fill"></i></a>
-                    <a href=""><i class="ri-instagram-fill"></i></a>
-                    <a href=""> <i class="ri-linkedin-box-fill"></i> </a>
-                  </div>
                 </div>
               </div>
             </div>
@@ -108,12 +96,6 @@
                   <h4>William Anderson</h4>
                   <span>CTO</span>
                   <p>Quisquam facilis cum velit laborum corrupti fuga rerum quia</p>
-                  <div class="social">
-                    <a href=""><i class="ri-twitter-fill"></i></a>
-                    <a href=""><i class="ri-facebook-fill"></i></a>
-                    <a href=""><i class="ri-instagram-fill"></i></a>
-                    <a href=""> <i class="ri-linkedin-box-fill"></i> </a>
-                  </div>
                 </div>
               </div>
             </div>
@@ -125,12 +107,6 @@
                   <h4>Amanda Jepson</h4>
                   <span>Accountant</span>
                   <p>Dolorum tempora officiis odit laborum officiis et et accusamus</p>
-                  <div class="social">
-                    <a href=""><i class="ri-twitter-fill"></i></a>
-                    <a href=""><i class="ri-facebook-fill"></i></a>
-                    <a href=""><i class="ri-instagram-fill"></i></a>
-                    <a href=""> <i class="ri-linkedin-box-fill"></i> </a>
-                  </div>
                 </div>
               </div>
             </div>
