--- a/About.html
+++ b/About.html
@@ -73,6 +73,17 @@
                 waterproofing experts know how to meet these standards of top-quality waterproofing!
             </p>
             <br>
+            <h1 class="text-center">Sequence of our strength</h1>
+            <ul class="">
+                <li>Terrace Waterproofing &amp; Heatproofing</li>
+                <li>Exterior Wall Waterproofing</li>
+                <li>Exposed Stone &amp; Brick Wall Waterproofing</li>
+                <li>Sandwich Treatment for Capillary Action</li>
+                <li>PU and Chem-Cem Injection Grouting</li>
+                <li>Bathroom, Basement Waterproofing</li>
+                <li>Water-Tank, Swimming Pool Waterproofing</li>
+                <li>Terrace Garden, Podium Waterproofing</li>
+            </ul>
             <h1 class="text-center">Frequently Asked Questions</h1>
             <br>
             <div class="accordion" id="accordionPanelsStayOpenExample">
