--- a/Service.html
+++ b/Service.html
@@ -78,7 +78,7 @@
                                 <div class="col-xl-3 col-md-6 d-flex align-items-stretch" data-aos="zoom-in"
                                     data-aos-delay="100">
                                     <div class="icon-box">
-                                           <div class="icon"><img src="assets/img/Service/wall.webp" alt=""
+                                           <div class="icon"><img src="assets/img/Service/Exterior Wall Waterproofing.jpg" alt=""
                                                 class="img-fluid"></div>
                                         <h4><a href="">Exterior wall waterproofing </a></h4>
                                     </div>
@@ -97,7 +97,7 @@
                                 <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-xl-0"
                                     data-aos="zoom-in" data-aos-delay="300">
                                     <div class="icon-box">
-                                        <div class="icon"><img src="assets/img/Service/structual.jpeg" alt=""
+                                        <div class="icon"><img src="assets/img/Service/Terrace Heatproofing.jpg" alt=""
                                                 class="img-fluid"></div>
                                         <h4><a href="">Terrace Waterproofing</a></h4>
                                     </div>
@@ -106,7 +106,7 @@
                                 <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-xl-0"
                                     data-aos="zoom-in" data-aos-delay="400">
                                     <div class="icon-box">
-                                        <div class="icon"><img src="assets/img/Service/bathroom.webp" alt=""
+                                        <div class="icon"><img src="assets/img/Service/Capillary Action Waterproofing 2.jpg" alt=""
                                                 class="img-fluid"></div>
                                         <h4><a href="">Capillary water proofing</a></h4>
                                     </div>
@@ -126,7 +126,7 @@
                                 <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-md-0"
                                     data-aos="zoom-in" data-aos-delay="200">
                                     <div class="icon-box">
-                                        <div class="icon"><img src="assets/img/Service/water-tank.webp" alt=""
+                                        <div class="icon"><img src="assets/img/Service/Terrace Garden Waterproofing.jpg" alt=""
                                                 class="img-fluid"></div>
                                         <h4><a href="">Terrace Garden waterproofing</a></h4>
 
@@ -156,26 +156,16 @@
                                 <div class="col-xl-3 col-md-6 d-flex align-items-stretch" data-aos="zoom-in"
                                     data-aos-delay="100">
                                     <div class="icon-box">
-                                        <div class="icon"><img src="assets/img/Service/wall.webp" alt=""
-                                                class="img-fluid"></div>
+                                        <div class="icon"><img src="assets/img/Service/Exposed Stone Waterproofing.jpg" alt="" 
+                                                class="img-fluid " style="object-fit:cover"></div>
                                         <h4><a href="">Exposed Stone/Brick Wall Waterproofing</a></h4>
-                                    </div>
-                                </div>
-
-                                <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-md-0"
-                                    data-aos="zoom-in" data-aos-delay="200">
-                                    <div class="icon-box">
-                                        <div class="icon"><img src="assets/img/Service/water-tank.webp" alt=""
-                                                class="img-fluid"></div>
-                                        <h4><a href="">Terrace Garden waterproofing</a></h4>
-
                                     </div>
                                 </div>
 
                                 <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-xl-0"
                                     data-aos="zoom-in" data-aos-delay="300">
                                     <div class="icon-box">
-                                        <div class="icon"><img src="assets/img/Service/structual.jpeg" alt=""
+                                        <div class="icon"><img src="assets/img/Service/Terrace Waterproofing (1).jpg" alt=""
                                                 class="img-fluid"></div>
                                         <h4><a href="">Terrace and Wall Waterproofing</a></h4>
                                     </div>
@@ -199,7 +189,7 @@
                                 <div class="col-xl-3 col-md-6 d-flex align-items-stretch" data-aos="zoom-in"
                                     data-aos-delay="100">
                                     <div class="icon-box">
-                                        <div class="icon"><img src="assets/img/Service/wall.webp" alt=""
+                                        <div class="icon"><img src="assets/img/Service/Bathroom Waterproofing.jpg" alt=""
                                                 class="img-fluid"></div>
                                         <h4><a href="">Bathroom waterproofing </a></h4>
                                     </div>
