--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
       <div class="row">
         <div class="col-lg-6 d-flex flex-column justify-content-center pt-4 pt-lg-0 order-2 order-lg-1"
           data-aos="fade-up" data-aos-delay="200">
-          <h1>Better Solutions For Your Business</h1>
-          <h2>We are team of talented designers making websites with Bootstrap</h2>
+          <h1>Complete Water &amp; Heat Proofing Solution for your Building</h1>
+          <h2>(We are Team of Trained and Experienced Full Time Technicians &amp; Applicators)</h2>
           <div class="d-flex justify-content-center justify-content-lg-start">
             <a href="#about" class="btn-get-started scrollto">Get Started</a>
             <a href="assets/video/water.mp4" class="glightbox btn-watch-video"><i
@@ -353,14 +353,14 @@
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
-                <p>Opposite PNB Bank,58, Panchsheel Complex, Kaulagarh Road, Dehradun City, Dehradun, Uttarakhand 248001
+                <p>16, Alkapuri, Ballupur Road, Near IMA Blood Bank, Dehradun 248001
                 </p>
               </div>
 
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>saiwaterproofingdoon@gmail.com/p>
+                <p>saishreewaterproofing@gmail.com</p>
               </div>
 
               <div class="phone">
@@ -386,6 +386,10 @@
                 <div class="form-group col-md-6">
                   <label for="name">Your Email</label>
                   <input type="email" class="form-control" name="email" id="email" required>
+                </div>
+                <div class="form-group col-md-8">
+                  <label for="name">Your Phone Number</label>
+                  <input type="tel" class="form-control" name="Phone" id="Phone" required>
                 </div>
               </div>
               <div class="form-group">
