--- a/teams.html
+++ b/teams.html
@@ -168,6 +168,10 @@
                     <label for="name">Your Email</label>
                     <input type="email" class="form-control" name="email" id="email" required>
                   </div>
+                  <div class="form-group col-md-8">
+                    <label for="name">Your Phone Number</label>
+                    <input type="tel" class="form-control" name="Phone" id="Phone" required>
+                  </div>
                 </div>
                 <div class="form-group">
                   <label for="name">Subject</label>
