enmil bug fixed

--- a/Service.html
+++ b/Service.html
@@ -309,7 +309,7 @@
                                 <div class="email">
                                     <i class="bi bi-envelope"></i>
                                     <h4>Email:</h4>
-                                    <p>saiwaterproofingdoon@gmail.com/p>
+                                    <p>saiwaterproofingdoon@gmail.com</p>
                                 </div>
 
                                 <div class="phone">
@@ -381,7 +381,7 @@
                                     <br><br>
                                     <strong>Phone:</strong>+91-7982956372<br>
                                     +91-8192971005<br>
-                                    <strong>Email:</strong> saiwaterproofingdoon@gmail.com<br>
+                                    <strong>Email:</strong> saiwaterproofingdoon@gmail.com
                                 </p>
                             </div>
 
