--- a/teams.html
+++ b/teams.html
@@ -141,7 +141,7 @@
                 <div class="email">
                   <i class="bi bi-envelope"></i>
                   <h4>Email:</h4>
-                  <p>saiwaterproofingdoon@gmail.com/p>
+                  <p>saiwaterproofingdoon@gmail.com</p>
                 </div>
   
                 <div class="phone">
